Add override field

--- a/force-app/main/default/layouts/ETA_Element__c-ETA Element Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/ETA_Element__c-ETA Element Layout.layout-meta.xml
@@ -18,6 +18,10 @@
                 <behavior>Edit</behavior>
                 <field>Namespace__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Processor_Override__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
